...

              // Form Fields
              CupertinoListSection.insetGrouped(
                header: Text(context.l10n.credentials.toUpperCase()),
                children: [
                  Semantics(
                    identifier: 'email_field',
                    child: CupertinoTextFormFieldRow(
                      controller: _emailController,
                      prefix: SizedBox(
                        width: 80,
                        child: Text(context.l10n.email, style: const TextStyle(fontSize: 16)),
                      ),
...
                        }
                        return null;
                      },
                    ),
                  ),
                  Semantics(
                    identifier: 'password_field',
                    child: Row(
                      children: [
                        Expanded(
                          child: CupertinoTextFormFieldRow(
                            controller: _passwordController,
                            prefix: SizedBox(
...
